--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <input type="submit" value="Search">
 </form>
 
-{% if result.word %}
+{% if result %}
 
 <h2>Search results for {{ result.word }}</h2>
 
