--- a/upload.html
+++ b/upload.html
@@ -6,7 +6,8 @@
 <h1>Upload data</h1>
 
 <form name="upload" action="{{ upload_url }}" method="POST" enctype="multipart/form-data">
-  <div><input type="file" name="file"></div>
+  <div>Title: <input type="text" name="book_title"></div>
+  <div>File: <input type="file" name="file"></div>
   <div><input type="submit" value="Upload"></div>
 </form>
 
